@@ -2,6 +2,7 @@ $Rev$
 [2007/09/17]
 FindInFiles.py DirBrowser.py
                     Improve Find in Files process with thread
+mEditorCtrl.py      If save file failed, then invoke save as
                     
 [2007/09/15]
 DirBrowser.py       Fix directory browser insert node bug
